[package]
name = "bpf"
version = "0.1.1"
authors = ["Frank Denis <github@pureftpd.org>"]
description = "Attach BPF filters"
license = "ISC"
homepage = "https://github.com/jedisct1/rust-bpf"
repository = "https://github.com/jedisct1/rust-bpf"
categories = ["os::unix-apis"]
edition = "2018"

[badges]
travis-ci = { repository = "jedisct1/rust-bpf" }

[features]
default = ["module"]
module = ["goblin"]

[dependencies]
clippy = {version = "~0", optional = true}
libc = "~0.2"
byteorder = "1.3"
goblin = {version = "0.0.24", optional = true}

[target.'cfg(target_os = "linux")'.dependencies]
bpf-sys = "0.3"